Update Guides to Micronaut 4 (#1269)
* Migrate `oracle-email-delivery` guide source and docs to Jakarta Mail for Micronaut 4 [skip ci]

closes #1119

* Update Guides to Micronaut 4

* use platform bom

* bump up asciidoc to 2.5.7

* add src/docs/asciidoc folder

delete asciidoc files

* remove mention 11 to graalvm

* Add warning about YAML dependency before yaml conf

* Add YAML feature for Application which use yaml

* use create-app-features

* add http-client feature to add HTTP Client dependency

* yaml config

* add note about HTTP Client dependencies

* use jakarta.validation not javax.validation

* use correct Micronaut validation coordinates

* use feature validation not micronaut-validation

* remove unused resources

* use create-app-features

* update to geb to 7.0

* add yaml dependency callout

* use jakarta.persistence

replace javax.persistence wtih jakarta.persistence

* add yaml feature

add yaml feature

yaml feature

add yaml

yaml feature

* remove jansi

ansi

* websocket feature

* add validation feature

* use Java 17 in Github Actions

* use JDK 17 not 11

* isse with validation and optional

* use auto_increment for h2

* support more

* update to Gradle 8.1.1

* update shadow jar to 8.1.1

* upgrade Micronaut Gradle plugin to 4.0.0-M6

* source and target compatibility to 17

* upgrade asciidoctor gradle plugin to 4.0.0-alpha.1

* remove asciidoc docExtensions

* Update spring guides

* delete GORM guides

* add jackson-databind dependency

* remove open api generator guides

* Remove jakarta-persistence-api feature

* pin guides to M5

* Fix micronaut-security-api-key

* Fix micronaut-security-basicauth

* Fix micronaut-security-jwt-cookie

* Fix micronaut-security-jwt

* Fix build for micronaut-security-keys-jwks

* Fix micronaut-security-session

* Fix micronaut-spring-boot -- ass yaml and Serdeable annotation

* Fix micronaut